err/djangocomponents.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DjangoComponents-0.0.0.33.dist-info'...
Listing './lib/python3.5/site-packages/django_components'...
Listing './lib/python3.5/site-packages/django_components/static'...
Listing './lib/python3.5/site-packages/django_components/static/js'...
Listing './lib/python3.5/site-packages/django_components/static/js/build'...
Listing './lib/python3.5/site-packages/django_components/static/js/build/.module-cache'...
Listing './lib/python3.5/site-packages/django_components/static/js/src'...
Listing './lib/python3.5/site-packages/django_components/templates'...
Listing './lib/python3.5/site-packages/django_components/templatetags'...
Compiling './lib/python3.5/site-packages/django_components/templatetags/components.py'...
***   File "./lib/python3.5/site-packages/django_components/templatetags/components.py", line 60
    print page_on, pages, start_point, end_point
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
